manifests/codegemma-7b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codegemma-7b
  namespace: llm
  labels:
    app: codegemma-7b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codegemma-7b
  template:
    metadata:
      labels:
        app: codegemma-7b
    spec:
      restartPolicy: Always
      containers:
      - name: vllm
        image: vllm/vllm-openai:latest
        command: ["/bin/sh", "-c"]
        args:
          - >
            vllm serve google/codegemma-7b
            --tensor-parallel-size 2
            --max-model-len 8192
            --dtype auto
            --gpu-memory-utilization 0.85
            --trust-remote-code
        ports:
	- containerPort: 8000
        resources:
          limits:
            nvidia.com/gpu: 2  # Request both GPUs
        volumeMounts:
        - mountPath: /root/.cache/huggingface
          name: hf-cache
        - mountPath: /dev/shm
          name: dshm
      volumes:
      - name: hf-cache
        persistentVolumeClaim:
          claimName: cache-pvc-2
      - name: dshm
        emptyDir:
          medium: Memory
          sizeLimit: "2Gi"
