manifests/codeqwen15-7b-chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qwen25-coder-7b
  namespace: llm
  labels:
    app: qwen25-coder-7b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qwen25-coder-7b
  template:
    metadata:
      labels:
        app: qwen25-coder-7b
    spec:
      restartPolicy: Always
      containers:
      - name: vllm
        image: vllm/vllm-openai:latest
        command: ["/bin/sh", "-c"]
        args:
          - >
            vllm serve Dracones/CodeQwen1.5-7B-Chat_exl2_8.0bpw
            --quantization=exllama2
            --tensor-parallel-size=2
            --max-model-len=8192
            --dtype=auto
            --gpu-memory-utilization=0.85
            --trust-remote-code
        ports:
	- containerPort: 8000
        resources:
          limits:
            nvidia.com/gpu: 2  # Request both GPUs
        volumeMounts:
        - mountPath: /root/.cache/huggingface
          name: hf-cache
        - mountPath: /dev/shm
          name: dshm
      volumes:
      - name: hf-cache
        persistentVolumeClaim:
          claimName: cache-pvc-1
      - name: dshm
        emptyDir:
          medium: Memory
          sizeLimit: "2Gi"
