manifests/ollama-custom-no-gpu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      volumes:
        - name: modelfile-volume
          configMap:
            name: qwen-custom
        - name: model-cache
          hostPath:
            path: /mnt/data/ollama-data
            type: DirectoryOrCreate
#          persistentVolumeClaim:
#            claimName: ollama-model-pvc
      containers:
        - name: ollama
          image: ollama/ollama:latest
          command: ["/bin/sh", "-c"]
          args:
            - |
              ollama create qwen7b-quant -f ./modelfile/Modelfile && \
              ollama serve
          ports:
            - containerPort: 11434
          volumeMounts:
            - name: modelfile-volume
              mountPath: /modelfile
            - name: model-cache
              mountPath: /root/.ollama
#          resources:
#            limits:
#              nvidia.com/gpu: 1
          readinessProbe:
            httpGet:
              path: /api/tags
              port: 11434
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 3
            failureThresholds: 3
          livenessProbe:
            httpGet:
              path: /api/tags
              port: 11434
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThresholds: 3
#      nodeSelector:
#        nvidia.com/gpu.present: "true"
#      tolerations:
#        - key: "nvidia.com/gpu"
#          operator: "Exists"
#          effect: "NoSchedule"
