manifests/vllm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm
  namespace: llm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm
  template:
    metadata:
      labels:
        app: vllm
    spec:
      volumes:
        - name: cache-volume
          persistentVolumeClaim:
            claimName: cache-volume
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: "2Gi"
      containers:
        - name: vllm
          image: vllm/vllm-openai:latest
          command: ["bin/sh", "-c"]
          args:
            - "vllm server $(VLLM_MODEL) $(VLLM_ARGS)"
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "16"
              memory: "64"
              nvidia.com/gpu: 1
            requests:
              cpu: "2"
              memory: "32"
              nvidia.com/gpu: 1
           volumeMounts:
             - mountPath: /root/.cache/huggingface
               name: cache-volume
             - mountPath: /dev/shm
               name: shm
