manifests/codegemma-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm
  namespace: llm
spec:
  type: NodePort
  selector:
   app: codegemma-7b
  ports:
   - name: http
     port: 8000
     targetport: 8000
     nodePort: 31900
