manifests/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: llm
spec:
  type: NodePort
  selector:
   app: ollama
  ports:
   - name: http
     port: 11434
     targetport: 11434
     nodePort: 31134
